// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils lexer test 1`] = `[]`;

exports[`utils lexer test 2`] = `[]`;

exports[`utils lexer test 3`] = `
[
  {
    "end": 22,
    "k": "username",
    "pre_len": 1,
    "start": 12,
  },
]
`;

exports[`utils lexer test 4`] = `
[
  {
    "end": 22,
    "k": "username",
    "pre_len": 1,
    "start": 12,
  },
]
`;

exports[`utils lexer test 5`] = `
[
  {
    "end": 10,
    "k": "username",
    "pre_len": 1,
    "start": 0,
  },
]
`;

exports[`utils lexer test 6`] = `
[
  {
    "end": 22,
    "k": "username",
    "pre_len": 1,
    "start": 12,
  },
  {
    "end": 44,
    "k": "password",
    "pre_len": 1,
    "start": 34,
  },
]
`;

exports[`utils lexer test 7`] = `
[
  {
    "end": 8,
    "k": "username",
    "pre_len": 0,
    "start": 0,
  },
]
`;

exports[`utils lexer test 8`] = `[]`;

exports[`utils lexer test 9`] = `[]`;

exports[`utils lexer test 10`] = `
[
  {
    "end": 7,
    "k": "name",
    "pre_len": 0,
    "start": 3,
  },
  {
    "end": 10,
    "k": "pw",
    "pre_len": 0,
    "start": 8,
  },
]
`;

exports[`utils lexer test 11`] = `
[
  {
    "end": 7,
    "k": "name",
    "pre_len": 0,
    "start": 3,
  },
  {
    "end": 11,
    "k": "pw",
    "pre_len": 0,
    "start": 9,
  },
]
`;

exports[`utils lexer test 12`] = `
[
  {
    "end": 7,
    "k": "name",
    "pre_len": 0,
    "start": 3,
  },
  {
    "end": 11,
    "k": "pw",
    "pre_len": 0,
    "start": 9,
  },
]
`;

exports[`utils lexer test 13`] = `
[
  {
    "end": 12,
    "k": "username",
    "pre_len": 2,
    "start": 0,
  },
]
`;

exports[`utils parse auth yaml 1`] = `
{
  "ghcr.io": {
    "password": "\${GITHUB_P}",
    "username": "\${GITHUB_U}",
  },
  "registry.cn-hangzhou.aliyuncs.com": {
    "password": "\${ALI_P}",
    "username": "\${ALI_U}",
  },
  "swr.cn-north-4.myhuaweicloud.com": {
    "password": "\${HUAWEI_P}",
    "username": "\${HUAWEI_U}",
  },
}
`;

exports[`utils parse image yaml 1`] = `
{
  "alpine": {
    "dest": [
      "swr.cn-north-4.myhuaweicloud.com/bxb100/alpine",
    ],
    "semver": "~ 3.20",
  },
  "ghcr.io/advplyr/audiobookshelf:latest": [
    "registry.cn-hangzhou.aliyuncs.com/bxb100/audiobookshelf:latest",
    "swr.cn-north-4.myhuaweicloud.com/bxb100/advplyr/audiobookshelf",
  ],
  "nginx": {
    "dest": [
      "swr.cn-north-4.myhuaweicloud.com/bxb100/nginx",
    ],
    "regex": "^1\\.13\\.[12]-alpine-perl$",
  },
}
`;
